feat: add route for postgres locations (#37)
* feat: add route for postgres locations

* chore: remove new tag

* refactor: move to correct place and add tests

* refactory: simplify

* fix: make openapi great again

* chore: openapi lints

* feat: lint openapi

* revert: coverage helper
